--- a/src/features/toolbar/components/ToolbarContent/ToolbarContent.module.css
+++ b/src/features/toolbar/components/ToolbarContent/ToolbarContent.module.css
@@ -4,24 +4,50 @@
   min-height: inherit;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
-  gap: 10px;
+  gap: 8px;
 }
 
-.delimiter {
+.sectionDivider {
   width: 1px;
   min-height: inherit;
   background-color: var(--faint-weak);
 }
 
-/* .label {
+.sectionLabel {
+  text-align: center;
+  color: var(--faint-strong-up, #848c94);
+
+  font: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px; /* 133.333% */
+  letter-spacing: 0.038px;
 }
 
-.tools {
+.section {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 8px;
 }
 
-.drawing {
+.sectionContent {
+  flex: 1;
+  display: grid;
+  grid-template-rows: repeat(6, auto);
+  grid-auto-flow: column;
+  grid-gap: 4px;
 }
 
-.buttons {
-} */
+.control-tiny {
+  align-items: flex-start;
+  grid-row: span 2;
+}
+
+.control-medium {
+  grid-row: span 3;
+}
+
+.control-large {
+  grid-row: span 6;
+  white-space: pre-line;
+}
