feat(panel): replace chevrons
replace double chevron logic with sequence logic
toggle full state on header panel click

--- a/src/components/Panel/styles.module.css
+++ b/src/components/Panel/styles.module.css
@@ -10,7 +10,12 @@
   & svg {
     color: var(--icon-base-strong);
   }
-  &:hover svg {
+
+  &:disabled svg {
+    color: var(--faint-weak-up);
+  }
+
+  &:hover:not(:disabled) svg {
     color: var(--base-strong);
   }
 }
