--- a/src/features/side_bar/components/AppLogo/AppLogo.module.css
+++ b/src/features/side_bar/components/AppLogo/AppLogo.module.css
@@ -1,5 +1,5 @@
 .logo {
-  padding: 4px 6px;
+  padding: 4px;
   pointer-events: none;
   display: flex;
   align-items: center;
@@ -17,4 +17,22 @@
   }
 
   white-space: nowrap;
+}
+
+.logoContainer {
+  position: relative;
+  width: 24px;
+  height: 0px;
+  padding-bottom: 24px;
+
+  & > img {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    object-fit: contain;
+  }
 }
