--- a/src/features/side_bar/components/SideBar/SideBar.module.css
+++ b/src/features/side_bar/components/SideBar/SideBar.module.css
@@ -66,11 +66,11 @@
 }
 
 .nestedRoute {
-  margin-top: 2px;
+  margin-top: 4px;
+}
 
-  & .sidebarButton {
-    padding-left: 24px;
-  }
+.open .nestedRoute .sidebarButton > div {
+  padding-left: 26px;
 }
 
 .collapsed .nestedRoute {
