--- a/src/features/side_bar/components/SideBar/SideBar.module.css
+++ b/src/features/side_bar/components/SideBar/SideBar.module.css
@@ -66,7 +66,11 @@
 }
 
 .nestedRoute {
-  margin-top: 4px;
+  margin-top: 12px;
+}
+
+.topLevelRoute + .nestedRoute {
+  margin-top: 8px;
 }
 
 .open .nestedRoute .sidebarButton > div {
