--- a/src/features/toolbar/components/ToolbarContent/ToolbarContent.module.css
+++ b/src/features/toolbar/components/ToolbarContent/ToolbarContent.module.css
@@ -35,21 +35,5 @@
   display: grid;
   grid-template-rows: repeat(6, auto);
   grid-auto-flow: column;
-  grid-gap: 4px;
-}
-
-.control-tiny {
-  align-items: flex-start;
-  grid-row: span 2;
-}
-
-.control-medium {
-  grid-row: span 3;
-  align-items: flex-start;
-}
-
-.control-large {
-  grid-row: span 6;
-  white-space: pre-line;
-  justify-content: center !important; /* TODO: fix in ui-kit */
+  gap: 4px;
 }
