fix(toolbar): update toolbar mobile width

--- a/src/features/toolbar/components/ToolbarPanel/ToolbarPanel.module.css
+++ b/src/features/toolbar/components/ToolbarPanel/ToolbarPanel.module.css
@@ -45,3 +45,13 @@
     }
   }
 }
+
+.panelContainer {
+  display: flex;
+}
+
+@media screen and (max-width: 420px) {
+  .panelContainer {
+    display: block;
+  }
+}
