feat(toolbar): 16704 migrate existing tools to new config (#567)
* refactor: more clear config creation

* fix tests and types

* fix initial crash

* fix: runtime errors

* fix: type error

* migrate most of features to new toolbar config

* resolve circular dependency -
all hooks now called from controller

* remove extra code

* remove last usage of old toolbar atom from features

* completely remove legacy toolbar

* resolve circular dependency

* update config

* feat: add borrowMapInteractions flag

* feat(toolbox): 16871 decouple drawtools from focused geometry editor feature (#569)

* design draw tools public interface

* add widget support to toolbar

* fix type that return FeatureCollection class

* update focused_geometry_editor
Now it's just create controls, pass geometry to and from draw tools

* implement draw tools interface using current logic

* remove old draw tools toolbox

* example of new toolbar api usage in an toolbar component

* fix type error

* feat(toolbar): setup the toolbar layout (#580)

- update map layout\n- add full and short toolbar states
- bump ui-kit version to 5

* feat(toolbar): add buttons (#582)

add existing toolbar buttons
bump ui-kit

* feat(panel): replace chevrons (#586)

* feat(panel): replace chevrons

replace double chevron logic with sequence logic
toggle full state on header panel click

* feat(panel): memoise chevron buttons

* feat(toolbar): update sidebar paddings (#584)

* feat(toolbar): update sidebar paddings

simplify sidebar components and classes

* fix(sidebar):update head and footer logo sizes

* fix(sidebar): update paddings

update divider paddings
update main sidebar horizontal padding

* fix(sidebar): update nested route paddings

* fix(sidebar): update nested route padding

* 13319 move existing tools to toolbar (#595)

* feat(toolbar): add drawtools widget

* fix: convertToFeatures  now supports  GeometryCollectio

--- a/src/features/toolbar/components/ToolbarPanel/ToolbarPanel.module.css
+++ b/src/features/toolbar/components/ToolbarPanel/ToolbarPanel.module.css
@@ -17,10 +17,6 @@
   height: 100%;
 }
 
-.panelIcon.desktop {
-  display: none;
-}
-
 /* mobile */
 @media screen and (max-width: 960px) {
   .panel.collapse {
@@ -30,18 +26,34 @@
   .scrollable {
     width: 100%;
   }
+}
 
-  .panelIcon.mobile {
-    display: flex;
-    &.show {
-      transition: opacity 0.33s linear 0s;
-      visibility: visible;
-      opacity: 1;
-    }
+.panelContainer {
+  display: flex;
+}
 
-    &.hide {
-      visibility: hidden;
-      opacity: 0;
-    }
+@media screen and (max-width: 485px) {
+  .panelContainer {
+    display: block;
+  }
+}
+
+.panelIcon {
+  display: flex;
+  &.show {
+    transition: opacity 0.33s linear 0s;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  &.hide {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+@media screen and (min-width: 961px) {
+  .panelIcon {
+    display: none;
   }
 }
