- Legend and Layers now use same and new Layers component - Removed folding indicator when no needed - Removed unnecessary Folding component - Indents created with FoldingWrap component instead on category and group components - Bivariate legend now located under layer as all other components - Bivariate legend now have same font style as other legends in compact panel mode fixes: - 15274 - 12632

--- a/src/features/layers_panel/components/LayersTree/LayersTree.module.css
+++ b/src/features/layers_panel/components/LayersTree/LayersTree.module.css
@@ -2,3 +2,7 @@
   padding: var(--unit) var(--half-unit);
   overflow-x: hidden;
 }
+
+.topLevelGroup {
+  margin-left: calc(var(--unit) + var(--half-unit));
+}
