--- a/src/components/FoldingWrap/FoldingWrap.module.css
+++ b/src/components/FoldingWrap/FoldingWrap.module.css
@@ -43,3 +43,7 @@
     padding: 0 !important;
   }
 }
+
+.childrenIndent {
+  margin: var(--half-unit) var(--unit) calc(var(--unit) * 2) calc(var(--unit) * 3);
+}
