--- a/src/features/layer_features_panel/components/LayerFeaturesPanel/LayerFeaturesPanel.module.css
+++ b/src/features/layer_features_panel/components/LayerFeaturesPanel/LayerFeaturesPanel.module.css
@@ -45,13 +45,7 @@
 /* mobile */
 @media screen and (max-width: 960px) {
   .featuresPanel.show {
-    position: absolute;
-    margin: 0;
-    height: calc(100% - var(--app-header-height));
-    width: 100vw;
-    & > div {
-      width: 100%;
-    }
+    max-height: calc(100vh - 60px);
   }
   .featuresPanel.collapse {
     display: none;
