--- a/src/features/bivariate_manager/components/BivariatePanel/BivariatePanel.module.css
+++ b/src/features/bivariate_manager/components/BivariatePanel/BivariatePanel.module.css
@@ -18,7 +18,7 @@
 }
 
 .panelBody {
-  height: 300px;
+  min-height: 300px;
   padding: 0 var(--double-unit) var(--double-unit) var(--double-unit);
   overflow: auto;
 
