--- a/src/features/bivariate_manager/components/BivariatePanel/BivariatePanel.module.css
+++ b/src/features/bivariate_manager/components/BivariatePanel/BivariatePanel.module.css
@@ -1,22 +1,10 @@
 .bivariatePanel {
   pointer-events: auto;
   position: relative;
-  z-index: 1; /* Show shadow over map */
-  margin-right: var(--unit);
   align-self: flex-start;
-  border-top-left-radius: var(--border-radius) !important;
-  border-bottom-left-radius: var(--border-radius) !important;
-  border-top-right-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;
   max-height: 100%;
-  height: 0;
-
+  width: 100%;
   &.show {
-    position: absolute;
-    visibility: visible;
-    width: 75vw;
-    margin: 0;
-    height: calc(100vh - 44px);
     align-items: center;
     & > div {
       width: 100%;
@@ -24,15 +12,13 @@
   }
 
   &.collapse {
-    visibility: visible;
     height: var(--panel-header-height);
     width: 100%;
   }
 }
 
 .panelBody {
-  height: calc(100vh - 44px - 41px);
-  width: 75vw;
+  min-height: 300px;
   padding: 0 var(--double-unit) var(--double-unit) var(--double-unit);
   overflow: auto;
 
