--- a/src/features/mcda/components/MCDAForm/style.module.css
+++ b/src/features/mcda/components/MCDAForm/style.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-flow: column nowrap;
   gap: var(--double-unit);
+  width: 650px;
+  align-items: flex-start;
 }
 
 .buttonsRow {
