feat(17480): Get range defaults from bivariate axes

--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerDetails/style.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerDetails/style.module.css
@@ -81,6 +81,10 @@
   cursor: pointer;
 }
 
+.textButtonDisabled {
+  color: var(--faint-strong);
+}
+
 .editButton {
   margin-inline-end: var(--unit);
   cursor: pointer;
