--- a/src/components/Layout/Article/Article.module.css
+++ b/src/components/Layout/Article/Article.module.css
@@ -1,6 +1,8 @@
 .mainWrap {
-  place-content: center;
-  flex: 1;
+  display: flex;
+  margin: 0 auto;
+  width: 100%;
+  flex-direction: column;
   padding-top: 80px;
   padding-bottom: 80px;
   overflow-y: auto;
