feat(17480): Edit layer flow in MCDA (#678)
* feat(17480): updated MCDA Layer legend layout

* feat(17480): MCDA layer editor inputs

* feat(17480): apply Sentiment colors

* chore: move MCDALayerDetails into separate component

* chore: Smaller text in inputs

* Combine input fields values into MCDAConfig object on save button press

* feat(17480): UpdateMCDAConfig after MCDA layer edit

* chore: move updateMCDAConfig() inside MCDALayerEditor to remove circular dependency

* chore: create an applyNewLayerSource() utils function

* chore: move apllyNewMCDAConfig to separate file to remove circular dependency. mcda/utils folder

* feat(17480): Get range defaults from bivariate axes

* chore: move MCDALayerDetails constants into separate file

* chore: add default values to constants

* feat(17480): display non-default values under MCDA layer name

* feat: validate weight and range fields

* fix: fix jumpy behavior of text inputs with errors

* fix: fix read-only value error when using "no" normalization value

* Fix default MCDA sentiments color scheme (red is bad now, as it should be)

* feat: apply colors from MCDAConfig sentiment colors to MCDA legend

* check for MCDA colors type when getting legend colors

* chore: rename MCDALayerParameters component

* fix string key for Max-min

* chore: MCDALayerParameterRow: make tipText required

* test: add tests to utils

* chore: console.error -> console.warn in generateHclGradientColors()

--- a/src/features/mcda/components/MCDALayerEditor/style.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/style.module.css
@@ -1,20 +1,4 @@
 .editor {
   margin-bottom: var(--unit);
-}
-.unit {
-  color: var(--text-faint-strong);
-}
-
-.label {
-  text-transform: capitalize;
-}
-
-.layer {
-  display: flex;
-  flex-flow: row nowrap;
-  padding: var(--half-unit) 0;
-}
-
-.layer:hover {
-  background-color: var(--accent-weak);
+  margin-right: calc(-1 * var(--half-unit));
 }
