feat(18419): Beautify MCDA layer analysis editing

--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameterRow/MCDALayerParameterRow.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameterRow/MCDALayerParameterRow.module.css
@@ -1,5 +1,5 @@
 .inputLine {
-  margin-bottom: var(--unit);
+  margin-bottom: var(--half-unit);
   display: flex;
   flex-direction: row;
   align-items: flex-start;
