--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+  margin-left: var(--unit);
 }
 
 .layerEditContainer {
@@ -28,6 +29,7 @@
 .layerButtons {
   display: flex;
   flex-flow: row nowrap;
+  margin-right: var(--half-unit);
 }
 
 .infoButton {
@@ -85,7 +87,7 @@
 }
 
 .selectInput button {
-  max-width: 77%;
+  max-width: 100%;
   height: 30px;
 }
 
