feat(18063): Add Reference Area info to user profile

--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -70,6 +70,13 @@
   }
 }
 
+.smallTitle {
+  font-weight: 500;
+  & + * {
+    margin-top: var(--unit);
+  }
+}
+
 .textArea {
   width: 100%;
   & textarea {
