feat(18342): add bio placeholder

--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -83,6 +83,9 @@
     resize: vertical;
   }
 }
+.textAreaPlaceholder {
+  white-space: pre-wrap;
+}
 
 /* Mobile view */
 @media screen and (max-width: 550px) {
