feat(15164): add forgot password on login page

--- a/src/features/user_profile/components/LoginForm/LoginForm.module.css
+++ b/src/features/user_profile/components/LoginForm/LoginForm.module.css
@@ -87,7 +87,10 @@
 }
 
 .forgotPasswordContainer {
-  margin-top: 16px;
+  margin-top: var(--unit);
+  & a {
+    color: var(--accent-strong);
+  }
 }
 
 .registerContainter {
