refactor(12618): add LayerActionIcon to MCDALayerParameters

--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
@@ -128,6 +128,7 @@
   cursor: pointer;
   color: var(--accent-strong);
   visibility: hidden;
+  align-items: flex-start;
 }
 
 .layer:hover .editButton {
