feat(18623): Add copyright popups to MCDA layers (axes) in layers panel (#750)
* chore: remove Indicator type duplications

* chore: remove unused JsonMCDAv4 interface

* feat(18623): add description and copyrights to MCDALayer, display a popup with indicators information

* Update MCDAStyle-related tests

* chore: rename meta prop to layersInfo

* chore: Smaller vertical margin for h4 in tooltips

* chore(18623): remove unnecessary useMemo from LayersInfo, add comment

--- a/src/features/tooltip/components/PopupTooltip/PopupTooltip.module.css
+++ b/src/features/tooltip/components/PopupTooltip/PopupTooltip.module.css
@@ -11,6 +11,12 @@
       color: var(--accent-strong);
     }
   }
+  & ul {
+    padding-left: var(--double-unit);
+  }
+  & h4 {
+    margin: var(--unit) 0;
+  }
 }
 
 @media (--mobile) {
