--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
@@ -77,7 +77,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 160px; /* min width of @kontur ui-kit Select component */
+  width: 144px;
 }
 
 .rangeInputBox {
@@ -99,7 +99,7 @@
 }
 
 .selectInput button {
-  max-width: 100%;
+  max-width: 90%;
   height: 30px;
 }
 
