--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -83,14 +83,13 @@
     resize: vertical;
   }
 }
+.textAreaPlaceholder {
+  white-space: pre-wrap;
+}
 
 /* Mobile view */
 @media screen and (max-width: 550px) {
   .divider {
     display: none;
   }
-}
-
-.bioTooltipContent {
-  white-space: pre-wrap;
 }
